Too much CPU time is spent under MemoryPressureHandler::currentMemoryUsagePolicy() https://bugs.webkit.org/show_bug.cgi?id=227001

Reviewed by Simon Fraser.

Make it so that RenderLayerCompositor::updateCompositingPolicy() queries MemoryPressureHandler::currentMemoryUsagePolicy()
at most once every 2 seconds given that the call is expensive. It can currently get called several times a second and
shows on CPU profiles.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateCompositingPolicy):


Canonical link: https://commits.webkit.org/239003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279084 268f45cc-cd09-0410-ab3c-d52691b4dbfc